--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: memcache
-version: 0.2.0
+version: 0.2.1
 author: Dart Team <misc@dartlang.org>
 description: Dart memcache APIs
 homepage: http://www.dartlang.org
 dev_dependencies:
-  unittest: '>=0.11.0 <0.12.0'
+  test: '^0.12.0'
