Update pubspec homepage and SDK constraint

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,9 @@
 name: memcache
-version: 0.2.1+2
+version: 0.2.2-dev
 author: Dart Team <misc@dartlang.org>
 description: Dart memcache APIs
-homepage: http://www.dartlang.org
+homepage: https://github.com/dart-lang/memcache
+environment:
+  sdk: ">=1.22.0 <2.0.0"
 dev_dependencies:
   test: '^0.12.0'
