--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: memcache
-version: 0.2.2-dev
+version: 0.2.2
 author: Dart Team <misc@dartlang.org>
 description: Dart memcache APIs
 homepage: https://github.com/dart-lang/memcache
