--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
 name: memcache
-version: 0.3.0
+version: 0.3.0+1
 author: Dart Team <misc@dartlang.org>
 description: Dart memcache APIs
 homepage: https://github.com/dart-lang/memcache
 environment:
-  sdk: ">=2.0.0-dev.20.0 <2.0.0"
+  sdk: ">=2.0.0-dev.20.0 <3.0.0"
 dev_dependencies:
-  test: '^0.12.0'
+  test: ^1.0.0
